--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:label="@string/title_activity_use_card"
             android:theme="@style/Theme.GiftcardSite.NoActionBar"
             android:exported="true">
-            <intent-filter>
+          <!--  <intent-filter>
             <action android:name="android.intent.action.VIEW" />
 
             <category android:name="android.intent.category.DEFAULT" />
@@ -32,14 +32,14 @@
             <data android:mimeType="text/giftcards_use" />
                 <data android:scheme="giftcard" />
                 <data android:host="appsec.moyix.net"/>
-            </intent-filter>
+            </intent-filter> -->
         </activity>
         <activity
             android:name=".GetCard"
             android:label="@string/title_activity_get_card"
             android:theme="@style/Theme.GiftcardSite.NoActionBar"
             android:exported="true">
-            <intent-filter>
+          <!-- <intent-filter>
             <action android:name="android.intent.action.VIEW" />
 
             <category android:name="android.intent.category.DEFAULT" />
@@ -47,7 +47,7 @@
             <data android:mimeType="text/giftcards_buy" />
                 <data android:scheme="giftcard" />
                 <data android:host="appsec.moyix.net"/>
-            </intent-filter>
+            </intent-filter> -->
         </activity>
         <activity
             android:name=".ProductScrollingActivity"
@@ -79,15 +79,15 @@
             android:label="@string/title_activity_scrolling_card"
             android:theme="@style/Theme.GiftcardSite.NoActionBar"
             android:exported="true">
-            <intent-filter>
+           <!-- <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
 
                 <data android:mimeType="text/giftcards_list" />
                 <data android:scheme="giftcard" />
                 <data android:host="appsec.moyix.net"/>
-            </intent-filter>
+            </intent-filter> -->
         </activity>
     </application>
 
