Trying to get it to compile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
             android:label="@string/title_activity_scrolling"
             android:theme="@style/Theme.GiftcardSite.NoActionBar"
             android:exported="true">
-            <intent-filter>
+          <!--  <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -62,7 +62,7 @@
                 <data android:mimeType="text/giftcards_browse" />
                 <data android:scheme="giftcard" />
                 <data android:host="appsec.moyix.net"/>
-            </intent-filter>
+            </intent-filter> -->
         </activity>
         <activity
             android:name=".MainActivity"
