--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.giftcardsite">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
 
     <application
         android:allowBackup="true"
@@ -12,14 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GiftcardSite"
-        android:usesCleartextTraffic="false"
-        tools:targetApi="m">
+        android:usesCleartextTraffic="false">
         <activity
             android:name=".UseCard"
             android:label="@string/title_activity_use_card"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar"
-            android:exported="true">
-          <!--  <intent-filter>
+            android:theme="@style/Theme.GiftcardSite.NoActionBar">
+            <!-- <intent-filter>
             <action android:name="android.intent.action.VIEW" />
 
             <category android:name="android.intent.category.DEFAULT" />
@@ -32,9 +29,8 @@
         <activity
             android:name=".GetCard"
             android:label="@string/title_activity_get_card"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar"
-            android:exported="true">
-          <!-- <intent-filter>
+            android:theme="@style/Theme.GiftcardSite.NoActionBar">
+            <!-- <intent-filter>
             <action android:name="android.intent.action.VIEW" />
 
             <category android:name="android.intent.category.DEFAULT" />
@@ -47,9 +43,8 @@
         <activity
             android:name=".ProductScrollingActivity"
             android:label="@string/title_activity_scrolling"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar"
-            android:exported="true">
-          <!--  <intent-filter>
+            android:theme="@style/Theme.GiftcardSite.NoActionBar">
+            <!-- <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -61,8 +56,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar"
-            android:exported="true">
+            android:label="@string/app_name"
+            android:theme="@style/Theme.GiftcardSite.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -72,12 +67,11 @@
         <activity
             android:name=".CardScrollingActivity"
             android:label="@string/title_activity_scrolling_card"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar"
-            android:exported="true">
-           <!-- <intent-filter>
+            android:theme="@style/Theme.GiftcardSite.NoActionBar">
+            <!-- <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
 
                 <data android:mimeType="text/giftcards_list" />
                 <data android:scheme="giftcard" />
