--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,19 +16,43 @@
             android:name=".UseCard"
             android:label="@string/title_activity_use_card"
             android:theme="@style/Theme.GiftcardSite.NoActionBar">
+            <!-- <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
 
+            <category android:name="android.intent.category.DEFAULT" />
+
+            <data android:mimeType="text/giftcards_use" />
+                <data android:scheme="giftcard" />
+                <data android:host="appsec.moyix.net"/>
+            </intent-filter> -->
         </activity>
         <activity
             android:name=".GetCard"
             android:label="@string/title_activity_get_card"
             android:theme="@style/Theme.GiftcardSite.NoActionBar">
+            <!-- <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
 
+            <category android:name="android.intent.category.DEFAULT" />
+
+            <data android:mimeType="text/giftcards_buy" />
+                <data android:scheme="giftcard" />
+                <data android:host="appsec.moyix.net"/>
+            </intent-filter> -->
         </activity>
         <activity
             android:name=".ProductScrollingActivity"
             android:label="@string/title_activity_scrolling"
             android:theme="@style/Theme.GiftcardSite.NoActionBar">
+            <!-- <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/giftcards_browse" />
+                <data android:scheme="giftcard" />
+                <data android:host="appsec.moyix.net"/>
+            </intent-filter> -->
         </activity>
         <activity
             android:name=".MainActivity"
@@ -44,7 +68,15 @@
             android:name=".CardScrollingActivity"
             android:label="@string/title_activity_scrolling_card"
             android:theme="@style/Theme.GiftcardSite.NoActionBar">
+            <!-- <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/giftcards_list" />
+                <data android:scheme="giftcard" />
+                <data android:host="appsec.moyix.net"/>
+            </intent-filter> -->
         </activity>
     </application>
 
