--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,73 +12,40 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GiftcardSite"
-        android:usesCleartextTraffic="false">
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".UseCard"
             android:label="@string/title_activity_use_card"
             android:theme="@style/Theme.GiftcardSite.NoActionBar">
-            <!-- <intent-filter>
-            <action android:name="android.intent.action.VIEW" />
 
-            <category android:name="android.intent.category.DEFAULT" />
-
-            <data android:mimeType="text/giftcards_use" />
-                <data android:scheme="giftcard" />
-                <data android:host="appsec.moyix.net"/>
-            </intent-filter> -->
         </activity>
         <activity
             android:name=".GetCard"
             android:label="@string/title_activity_get_card"
             android:theme="@style/Theme.GiftcardSite.NoActionBar">
-            <!-- <intent-filter>
-            <action android:name="android.intent.action.VIEW" />
 
-            <category android:name="android.intent.category.DEFAULT" />
-
-            <data android:mimeType="text/giftcards_buy" />
-                <data android:scheme="giftcard" />
-                <data android:host="appsec.moyix.net"/>
-            </intent-filter> -->
         </activity>
         <activity
             android:name=".ProductScrollingActivity"
             android:label="@string/title_activity_scrolling"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar">
-            <!-- <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+            android:theme="@style/Theme.GiftcardSite.NoActionBar"
 
-                <category android:name="android.intent.category.DEFAULT" />
+    </activity>
+    <activity
+        android:name=".MainActivity"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.GiftcardSite.NoActionBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <data android:mimeType="text/giftcards_browse" />
-                <data android:scheme="giftcard" />
-                <data android:host="appsec.moyix.net"/>
-            </intent-filter> -->
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+    <activity
+        android:name=".CardScrollingActivity"
+        android:label="@string/title_activity_scrolling_card"
+        android:theme="@style/Theme.GiftcardSite.NoActionBar">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".CardScrollingActivity"
-            android:label="@string/title_activity_scrolling_card"
-            android:theme="@style/Theme.GiftcardSite.NoActionBar">
-            <!-- <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-
-                <data android:mimeType="text/giftcards_list" />
-                <data android:scheme="giftcard" />
-                <data android:host="appsec.moyix.net"/>
-            </intent-filter> -->
-        </activity>
-    </application>
-
-</manifest>
+    </activity>
+</application>
+    </manifest>
